@@ -402,6 +402,7 @@
   "project" => "Project",
   "projectid" => "Project",
   "projects" => "Projecten",
+  "project_body" => "Er is voor het project %s een documentenstructuur aangemaakt op de volgende locatie: %s",
   "project_members" => "Teamleden",
   "project_member_fuzzyhint" => "Vul een komma-gescheiden lijst van toe te voegen teamleden in, en kies een rol voor de nieuwe leden.",
   "project_notes" => "Project notities",
@@ -409,6 +410,7 @@
   "project_personcontact" => "Contactpersoon",
   "project_select" => "Selecteer een project",
   "project_select_none" => "Geen project geselecteerd",
+  "project_subject" => "Documenten structuur aangemaakt voor project: ",
   "project_tab_default" => "Algemeen",
   "project_tab_notes" => "Notities",
   "project_tab_planning" => "Planning",
