@@ -61,6 +61,8 @@ Changes in Achievo 1.3
   a phase. [Dennis]
 + Added filter and a column diff_planning to the projectstatus report. 
   [dennisjan]
++ Added new feature when you add a project and you want to copy a specific 
+  documentstructure. [dennisjan]
 - Removed duplicate Dayview link in the calendar Employeeview. [Guido]
 * Fixed PHP notices. [Guido]
 * Replaced deprecated text() calls by atktext(). [Guido]
